[BE] FEAT: 이미지 추가 API 임시 구현 및 필요한 Validation 어노테이션 추가, 의존성 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 	//AWS
 	implementation 'org.springframework.cloud:spring-cloud-dependencies:2021.0.8'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'javax.xml.bind:jaxb-api:2.3.1' // java 8 이후 포함되지 않는 파일 업로드 시 사용되던 API
+
 
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
