--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,14 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.13.0",
+    "react-transition-group": "^4.4.5",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-transition-group": "^4.4.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
