[BE] FEAT: DB 연동 성공

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,33 +1,16 @@
 version: "3.8"
 
 services:
-  db:
-    image: mariadb:latest
+  mariadb:
+    container_name: paw_local
+    build: ./
     restart: always
     environment:
-      MARIADB_ROOT_PASSWORD: password
+      MARIADB_DATABASE_HOST: localhost
       MARIADB_DATABASE: paw
-      MARIADB_USER: test
+      MARIADB_USER: root
       MARIADB_PASSWORD: password
-    #      MYSQL_TCP_PORT: 3306
-    #      MYSQL_UNIX_PORT: 3306
+      MARIADB_ROOT_PASSWORD: password
     ports:
       - "3311:3306"
-    #    volumes:
-    #      - ./database/ddl:/docker-entrypoint-initdb.d
-    #      - ./database/data:/var/lib/mysql
-    healthcheck:
-      test:
-        [
-          "CMD",
-          "mysqladmin",
-          "ping",
-          "--silent",
-          "-h",
-          "localhost",
-          "-u",
-          "root",
-          "-ppw",
-        ]
-      timeout: 20s
-      retries: 10
+    tty: true
