--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -35,14 +35,18 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
     //QueryDSL
     implementation "com.querydsl:querydsl-codegen:5.0.0"
     implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-
-
 
     //AWS
     implementation 'org.springframework.cloud:spring-cloud-dependencies:2021.0.8'
