--- a/backend/nginx/configure.conf
+++ b/backend/nginx/configure.conf
@@ -28,7 +28,7 @@ server {
 
   # Vite
   location /hmr/ {
-    proxy_pass              http://host.docker.internal:4242/;
+    proxy_pass              http://host.docker.internal:2424/;
     proxy_http_version                 1.1;
     proxy_cache_bypass                 $http_upgrade;
 
@@ -51,7 +51,7 @@ server {
   }
 
   location / {
-    proxy_pass http://host.docker.internal:4242;
+    proxy_pass http://host.docker.internal:2424;
     proxy_http_version                 1.1;
     proxy_cache_bypass                 $http_upgrade;
 
@@ -73,13 +73,8 @@ server {
     proxy_read_timeout                 3600s;
   }
 
-  location ^~ /api {
-    proxy_pass http://host.docker.internal:2424;
-    proxy_set_header Host $host;
-  }
-
-  location ^~ /auth {
-    proxy_pass http://host.docker.internal:2424;
+  location ^~ /v1 {
+    proxy_pass http://host.docker.internal:4242;
     proxy_set_header Host $host;
   }
 }
