--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -12,6 +12,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
 
+
 server:
   port: 8080
 
@@ -26,3 +27,30 @@ cloud:
       bucket-name: test-bucket-name
       profile-image-directory: profile-images
       board-media-directory: board-media
+  oauth2:
+    client:
+      registration:
+        ft:
+          name: ft
+          grant-type: code
+          token-grant-type: authorization_code
+          access-token-name: access_token
+          scope: public
+      provider:
+        ft:
+          authorization-uri: https://api.intra.42.fr/oauth/authorize
+          token-uri: https://api.intra.42.fr/oauth/token
+          user-info-uri: https://api.intra.42.fr/v2/me
+          callback-uri: http://localhost:4242/v1/auth/login/callback
+      credentials:
+        ft:
+          client-id: client-id
+          client-secret: client-secret
+    domain:
+      service: 42paw.com # TODO: 임시
+      frontend: http://localhost
+    jwt:
+      secret-key: this-is-secret-key-this-is-secret-key-this-is-secret-key
+      token:
+        name: access_token
+        expiry: 28 #days
