--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -11,6 +11,8 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
+        default_batch_fetch_size: 100 #https://velog.io/@joonghyun/SpringBoot-JPA-JPA-Batch-Size%EC%97%90-%EB%8C%80%ED%95%9C-%EA%B3%A0%EC%B0%B0
+    show-sql: true
 
 
 server:
