--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
     "cors": "^2.8.5",
