[BE] FEAT: 캐시 의존성 추가 및 간단한 Config, Cache enum 추가

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -31,6 +31,9 @@ dependencies {
 
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
+    // Cache
+    implementation("com.github.ben-manes.caffeine:caffeine:3.1.8")
+    
     // OAUTH, AOP
     implementation 'org.springframework.boot:spring-boot-starter-aop'
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
