--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.13.0",
+    "react-spring": "^9.7.2",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.1"
   },
