--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
@@ -20,7 +21,6 @@
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.13.0",
-    "react-spring": "^9.7.2",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.1"
   },
