--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -69,6 +69,28 @@ dependencies {
     testRuntimeOnly 'com.h2database:h2'
 }
 
+ext {
+    configDirectory = file("$rootDir/backend_config")
+}
+
+tasks.register('copyMainConfig', Copy) {
+    from "${configDirectory}/main/resources"
+    into 'src/main/resources'
+}
+
+tasks.register('copyTestConfig', Copy) {
+    from "${configDirectory}/test/resources"
+    into 'src/test/resources'
+}
+
+tasks.named('processResources') {
+    dependsOn 'copyMainConfig'
+}
+
+tasks.named('processTestResources') {
+    dependsOn 'copyTestConfig'
+}
+
 test {
     useJUnitPlatform()
 }
