--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -70,7 +70,7 @@ dependencies {
 }
 
 ext {
-    configDirectory = file("$rootDir/backend_config")
+    configDirectory = file("backend/backend_config")
 }
 
 tasks.register('copyMainConfig', Copy) {
