[BE] FEAT: build시 plain jar를 생성하지 않도록 수정

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -91,6 +91,10 @@ tasks.named('processTestResources') {
     dependsOn 'copyTestConfig'
 }
 
+jar {
+    enabled = false
+}
+
 test {
     useJUnitPlatform()
 }
