--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.13.0",
     "recoil": "^0.7.7",
-    "styled-components": "^6.0.1"
+    "styled-components": "^6.0.1",
+    "swiper": "^10.2.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.6.0",
