--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.33.0",
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
     "cors": "^2.8.5",
