--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       MARIADB_DATABASE_HOST: localhost
       MARIADB_DATABASE: paw
       MARIADB_USER: root
-      MARIADB_PASSWORD: password
-      MARIADB_ROOT_PASSWORD: password
+      MARIADB_PASSWORD: pw
+      MARIADB_ROOT_PASSWORD: pw
     ports:
       - "3311:3306"
     tty: true
@@ -18,6 +18,6 @@ services:
     container_name: nginx_gateway
     image: nginx:latest
     ports:
-      - '80:80'
+      - "80:80"
     volumes:
       - ./nginx/:/etc/nginx/conf.d/
