--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       MARIADB_DATABASE_HOST: localhost
       MARIADB_DATABASE: paw
       MARIADB_USER: root
-      MARIADB_PASSWORD: pw
-      MARIADB_ROOT_PASSWORD: pw
+      MARIADB_PASSWORD: password
+      MARIADB_ROOT_PASSWORD: password
     ports:
       - "3311:3306"
     tty: true
