--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "42pet",
+  "name": "42paw",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && aws s3 sync ./dist s3://42paw-front-deploy --profile=hyungnoh && aws cloudfront create-invalidation --profile=hyungnoh --distribution-id E3G4X4QI6AZ8J1 --paths '/*'"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
