[FE] FEAT: cicd수정

--- a/.github/workflows/frontend_cicd.yml
+++ b/.github/workflows/frontend_cicd.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Main S3에 배포 및 CloudFront 캐시 무효화
         if: ${{ github.ref == 'refs/heads/dev' }}
         run: |
-          aws s3 sync ./dist s3://42paw-front-deploy
+          aws s3 sync ./frontend/dist s3://42paw-front-deploy
           aws cloudfront create-invalidation --distribution-id E3G4X4QI6AZ8J1 --paths '/*'
