--- a/.github/workflows/frontend_cicd.yml
+++ b/.github/workflows/frontend_cicd.yml
@@ -39,7 +39,7 @@ jobs:
       #   run: npm run test:e2e --prefix frontend
 
       - name: Configure AWS credentials
-        if: ${{ github.ref == 'refs/heads/dev' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -47,7 +47,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Main S3에 배포 및 CloudFront 캐시 무효화
-        if: ${{ github.ref == 'refs/heads/dev' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         run: |
           aws s3 sync ./frontend/dist s3://42paw-front-deploy
           aws cloudfront create-invalidation --distribution-id E3G4X4QI6AZ8J1 --paths '/*'
