--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.13.0",
+    "react-scroll": "^1.8.9",
     "recoil": "^0.7.7",
     "styled-components": "^6.0.1",
     "swiper": "^10.2.0"
@@ -34,6 +35,7 @@
     "@types/node": "^20.4.6",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
+    "@types/react-scroll": "^1.8.7",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-react": "^4.0.0",
