[FE] FEAT: board,comment followtype 추가 및 manifest 수정

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "42paw",
-  "short_name": "42paw",
+  "name": "42PAW",
+  "short_name": "42PAW",
   "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#485EEE",
+  "theme_color": "#afb1d1",
   "icons": [
     {
       "src": "icons/icon.png",
