--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.4.0",
     "canvas-confetti": "^1.6.0",
     "cors": "^2.8.5",
+    "heic2any": "^0.0.4",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-advanced-cropper": "^0.19.3",
