[FE] FIX: 휴대폰 사진 업로드 가능

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,13 +8,14 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "deploy": "npm run build && aws s3 sync ./dist s3://42paw-front-deploy --profile=hyungnoh && aws cloudfront create-invalidation --profile=hyungnoh --distribution-id E3G4X4QI6AZ8J1 --paths '/*'"
+    "deploy": "npm run build && aws s3 sync ./dist s3://42paw-front-deploy --profile=mingkang && aws cloudfront create-invalidation --profile=mingkang --distribution-id E3G4X4QI6AZ8J1 --paths '/*'"
   },
   "dependencies": {
     "@react-spring/web": "^9.7.3",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.33.0",
     "axios": "^1.4.0",
+    "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.6.0",
     "cors": "^2.8.5",
     "heic2any": "^0.0.4",
