[BE] FIX: nginx config상 HTTP Request의 Body 용량이 10MB까지 가능하도록 설정

--- a/backend/nginx/configure.conf
+++ b/backend/nginx/configure.conf
@@ -26,6 +26,7 @@ server {
   listen       80  default_server;
   server_name  _;
 
+  client_max_body_size 10M;
   # Vite
   location /hmr/ {
     proxy_pass              http://host.docker.internal:2424/;
